fix navbar width for various screen sizes so that dropdown isn't hidden off screen

--- a/app/assets/stylesheets/Navigation.scss
+++ b/app/assets/stylesheets/Navigation.scss
@@ -4,9 +4,11 @@
   z-index: 100;
   position: fixed !important;
   background-color: $beige;
-  max-width: 1133px !important;
+  max-width: 1155px !important;
   width: 100%;
-  padding-left: 0 !important;
+  padding-left: 23px !important;
+  left: 0 !important;
+  right: 0 !important;
 
   .dropdown-menu {
     left: auto;
@@ -16,7 +18,13 @@
 
 @media (max-width: 1200px) and (min-width: 992px) {
   .Navigation {
-    left: 0 !important;
-    padding-left: 40px !important;
+    padding-left: 20px !important;
+    max-width: 1040px !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .Navigation {
+    padding-left: 16px !important;
   }
 }
